# understory-cover-analysis

./: .gitignore  README.md  _quarto.yml  classify_quadrat_regions.spec  index.qmd  main.py  pyproject.toml
app/: classify_quadrat_regions.py
docs/: index.html  search.json
docs/notebooks/: classify_quadrat_regions_explained.html  hsv_color_space.html  projective_transformation.html  supplementary.html
notebooks/: classify_quadrat_regions_explained.qmd  hsv_color_space.qmd  projective_transformation.qmd  supplementary.qmd
output/: classify_quadrat_regions.csv
